--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@adiwajshing/keyed-db": "^0.2.4",
     "@distube/ytdl-core": "^4.13.5",
     "pino": "^7.0.5",
-    "pm2": "^5.2.0",
+    "pm2": "^latest",
     "util": "^0.12.4",
     "express": "latest",
     "axios": "^1.2.5",
