--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
     "restart": "pm2 restart queenrashumd"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "6.6.0",
+    "@whiskeysockets/baileys": "6.7.16",
     "@adiwajshing/keyed-db": "^0.2.4",
-    "@distube/ytdl-core": "^4.13.5",
-    "pino": "^7.0.5",
-    "pm2": "latest",
-    "util": "^0.12.4",
-    "express": "latest",
-    "axios": "^1.2.5",
-    "file_size_url": "^1.0.4",
-    "fs-extra": "^11.1.0",
+    "@distube/ytdl-core": "^4.16.9",
+    "pino": "^9.6.0",
+    "pm2": "6.0.5",
+    "util": "^0.12.5",
+    "express": "5.1.0",
+    "axios": "^1.9.0",
+    "file_size_url": "^1.0.6",
+    "fs-extra": "^11.3.0",
     "path": "^0.12.7",
-    "node-fetch": "^2.6.1",
-    "megajs": "^1.1.0",
+    "node-fetch": "^3.3.2",
+    "megajs": "^1.3.7",
     "vm": "^0.1.0",
     "qrcode-terminal": "^0.12.0",
     "yt-search": "2.12.1",
