--- a/package.json
+++ b/package.json
@@ -44,5 +44,6 @@
     "@mrnima/tiktok-downloader":"1.0.0",
     "@mrnima/facebook-downloader":"1.0.0",
     "mrnima-moviedl":"1.0.0"
+    "denethdev-ytmp3":"1.0.3"
   }
 }
